fix for ignored files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ set(TARGET DekitaRPG)
 project(${TARGET})
 
 set(ModOutputDir ${CMAKE_SOURCE_DIR}/Output/${TARGET})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ModOutputDir})
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ModOutputDir})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ModOutputDir})
+# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ModOutputDir})
+# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ModOutputDir})
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ModOutputDir})
 
 set(BASE_SOURCE ${CMAKE_SOURCE_DIR}/DekitaMod/src)
 
